Added the swagger endpoints
